RabbitMQ/Kubernetes/1- Operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-prod-ingress
  namespace: rabbit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.example.com  # Replace with your actual domain or use an IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-prod
            port:
              number: 15672  # RabbitMQ Management UI
      - path: /amqp
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-prod
            port:
              number: 5672  # AMQP protocol
